# c_homework2018-1

./: CMakeLists.txt  Makefile  README.md  main.c
src/: CMakeLists.txt
src/array_stuff/: array_stuff.c  array_stuff.h
src/game/: game.c  game.h
src/nextSmallest&prevBiggest/: prevBiggestAndNextSmallest.c
src/nextSmallestAndPrevBiggest/: prevBiggestAndNextSmallest.c  prevBiggestAndNextSmallest.h
src/stack/: stack.c  stack.h
src/unique_chars/: unique_chars.c  unique_chars.h
src/util/: vector.c  vector.h
src/xor/: xor.c  xor.h
test/: CMakeLists.txt
test/homework_tests/: CMakeLists.txt  array_stuff_tests.cpp  game_tests.cpp  main.cpp  prev_biggest_next_tmallest_tests .cpp  stack_tests.cpp  unique_chars_tests.cpp  xor_tests.cpp
